cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jhonatan-brasilia
  annotations: 
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jhonatan.brasilia.me
    secretName: jhonatan-brasilia-tls
  rules:
  - host: jhonatan.brasilia.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deel-reverse-ip-helm-deel-ip-reverse
            port:
              number: 80
      - path: /argo
        pathType: Prefix
        backend:
          service:
            name: argocd-service
            port:
              number: 80
            targetPort: 80
